<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_form"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/pointa"
        android:layout_width="355dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp"
        android:background="@drawable/rounded_white"
        android:ems="10"
        android:hint="@string/from"
        android:inputType="text"
        android:padding="5dp"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:textColor="@color/dark" />

    <EditText
        android:id="@+id/pointb"
        android:layout_width="355dp"
        android:layout_height="49dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="159dp"
        android:background="@drawable/rounded_white"
        android:ems="10"
        android:hint="@string/to"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:textColor="@color/dark" />
    <TextView
        android:id="@+id/departdate"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/pointb"
        android:layout_above="@+id/pointb"
        android:text=""
        />

    <TextView
        android:id="@+id/returndate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/departDate"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="66dp"
        android:text="" />

    <Button
        android:id="@+id/departDate"
        android:layout_width="164dp"
        android:layout_height="70dp"
        android:layout_alignStart="@+id/pointa"
        android:layout_alignTop="@+id/returnDate"
        android:background="@drawable/dark"
        android:onClick="showDatePickerDialog"
        android:text="@string/departDate"
        android:textColor="@color/sky" />

    <Button
        android:id="@+id/returnDate"
        android:layout_width="162dp"
        android:layout_height="70dp"
        android:layout_alignEnd="@+id/pointa"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="201dp"
        android:onClick="showDatePickerDialog"
        android:text="@string/returnDate"
        android:background="@drawable/dark"
        android:textColor="@color/sky"/>

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:background="@drawable/rounded_dark"
        android:textColor="@color/sky"
        android:text="@string/search"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/pointa"
        android:text="*"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pointa"
        android:layout_alignStart="@+id/pointa"
        android:layout_marginBottom="-94dp"
        android:text="*"
        android:textSize="24sp" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="153dp"
        android:layout_marginEnd="57dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_business"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/businessClass" />

        <RadioButton
            android:id="@+id/radio_econom"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/economClass" />
    </RadioGroup>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="21dp"
        android:text="@string/logout" />

    <Button
        android:id="@+id/go_to_saved_requests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="21dp"
        android:text="@string/my_saved_requests" />

</RelativeLayout>