<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:id="@+id/activity_choose_social_network"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context="com.backendless.examples.login_with_sdk.choose_social_network_activity">
		<!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
		<!--android:paddingRight="@dimen/activity_horizontal_margin"-->
		<!--android:paddingTop="@dimen/activity_vertical_margin"-->
		<!--android:paddingBottom="@dimen/activity_vertical_margin"-->

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:contentDescription="@string/todo"
        android:visibility="invisible"
        />

	<Button
		android:id="@+id/signUpBtn"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="191dp"
		android:background="@drawable/rounded_dark"
		android:text="@string/sigh_up"
		android:textColor="@color/sky"
		android:textSize="20sp"
		android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView3"
        android:layout_marginTop="173dp"
        android:gravity="center"
        android:text="@string/via_api"
        android:textSize="20sp"
        android:textColor="@color/dark"
        android:textStyle="bold"
        />

    <ImageButton
        android:id="@+id/button_loginWithGooglePlusSDK"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="17dp"
        android:background="@drawable/ic_google"
        />

    <ImageButton
        android:id="@+id/vk_api"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/button_loginWithGooglePlusSDK"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_vk" />

    <ImageButton
        android:id="@+id/button_loginWithFacebookSDK"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/textView4"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignTop="@+id/vk_api"
        android:background="@drawable/ic_facebook"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_loginWithGooglePlusSDK"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:gravity=""
        android:text="@string/signedin"
        android:textSize="20sp"
        android:textColor="@color/dark"
        android:textStyle="bold"
        />

	<Button
		android:id="@+id/signInBtn"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/textView4"
		android:layout_alignParentStart="true"
		android:layout_marginBottom="25dp"
		android:background="@drawable/rounded_dark"
		android:text="@string/sign_in"
		android:textColor="@color/sky"
		android:textSize="20sp"
		android:textStyle="bold" />
</RelativeLayout>
